--- a/SuperLandmine/SuperLandmine.csproj
+++ b/SuperLandmine/SuperLandmine.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>LethalCompanyTemplate</AssemblyName>
-    <Description>A template for Lethal Company</Description>
-    <Version>1.0.0</Version>
+    <AssemblyName>SuperLandmine</AssemblyName>
+    <Description>SuperLandmine mod for Lethal Company</Description>
+    <Version>1.0.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
